--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,6 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url("./assets/bg.png");
   }
   
   .App {
@@ -16,35 +17,39 @@ body {
   }
   
   form {
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 2rem;
+    width: 100%;
+    height: 60%;
+    justify-content: center;
   }
   
   input, textarea {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
+    padding: 1rem;
+    outline: none;
+    border: 1px solid rgb(202, 202, 202);
+    margin: 0.5rem;
+    width: 90%;
     border-radius: 5px;
   }
   
   button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background: #007bff;
+    background-color:rgb(156,0,60);
     color: white;
+    border: none;
+    padding: 1rem 2rem;
+    width: 100%;
+    border-radius: 10px;
     cursor: pointer;
-    font-size: 16px;
+
   }
+  button :hover{
   
-  button:hover {
-    background: #0056b3;
+      background-color: rgb(126,0,48);
+
   }
   
   .dashboard-container {
@@ -54,6 +59,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 600px;
     margin: auto;
+    text-align: center;
   }
   
   .profile img {
@@ -61,6 +67,7 @@ body {
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
+    border: 1px rgb(126,0,48);
   }
   
   .profile p {
@@ -72,5 +79,13 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .profile-update-container img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px rgb(126,0,48);
   }
   
